# vv-phone

./: Cargo.toml  README.md  code_review_input.txt  diff.txt
src/: lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
src/media/: audio.rs  codec.rs  mod.rs  rtp.rs  sdp.rs
src/sip/: auth.rs  mod.rs  transport.rs  ua.rs
src/ui/: mod.rs
