[package]
name = "softphone"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
bytes = "1.5"
futures = "0.3"
uuid = { version = "1.6", features = ["v4"] }
md-5 = "0.10"
sha2 = "0.10"
base64 = "0.21"
rand = "0.8"

# Commenting out UI and Audio for now due to environment limitations
# cpal = "0.15"
# egui = "0.28"
# eframe = "0.28"

[dev-dependencies]
mockall = "0.12"

[workspace]
members = []
